--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 NODE_ENV = development
 PORT = 5000
+MONGO_URI = mongodb+srv://Padi:ra6656634ra@cluster0.8zjvj.mongodb.net/mernapp?retryWrites=true&w=majority
